@@ -2,6 +2,9 @@ Known bugs of pkTriggerCord:
 
   Setting jpeg sharpness/contrast/saturation has no effect sometimes.
 
+  Taking picture restores jpeg image tone, so jpeg image tone setting
+  is quite useless.
+
   Downloading jpeg with non-maximal resolution does not work.
 
   Setting exposure mode has no effect ( maybe it's not a bug only it's
