@@ -21,6 +21,7 @@ pktriggercord-cli - command-line Pentax DSLR tethering software
 .OP \-\-ae_metering AE_METERING
 .OP \-\-resolution RESOLUTION
 .OP \-\-quality QUALITY
+.OP \-\-jpeg_image_tone IMAGE_TONE
 .OP \-\-auto_focus
 .OP \-\-green
 .OP \-\-warnings
@@ -177,6 +178,14 @@ Specify jpeg quality using the 'star' rating of the camera. 1, 2, 3 can be used 
 \fB\-r\fR,\fB\-\-resolution\fR \fIRESOLUTION\fR
 .RS 4
 Specify jpeg resolution. While this changes the jpeg resolution setting in the camera, it will not affect the resolution of the downloaded jpeg file. (it's a bug)\.
+.RE
+.PP
+\fB\-\-jpeg_image_tone\fR \fIIMAGE_TONE\fR
+.RS 4
+Specify the jpeg image tone. Valid values are: Natural, Bright,
+Portrait, Landscape, Vibrant, Monochrome, Muted,
+ReversalFilm\. Currently this setting is temporary, picture taking
+restores it back to the original, so it's quite useless\.
 .RE
 .HnS 2
 .SS Other
